[front|fix] placeholders not showing up dropdown

--- a/front/src/app/core/dropdown/dropdown.scss
+++ b/front/src/app/core/dropdown/dropdown.scss
@@ -107,3 +107,8 @@ input::placeholder{
     color: v.$text-color;
   }
 }
+
+.placeholder{
+  opacity: .5;
+  font-size: .8em;
+}
